[ADD] Auth, Admin Dashboard, and Package CRUD

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,9 @@ nb-configuration.xml
 
 # JavaScript Library
 node_modules
+
+# Template
+app/Models/TempModel.php
+app/Controllers/TempController.php
+trial.php
+app/Views/temp
